--- a/src/meson.build
+++ b/src/meson.build
@@ -36,10 +36,13 @@ nvofapi_src = files([
   'util/util_string.cpp',
   'util/util_env.cpp',
   'util/util_log.cpp',
+  'nvofapi/resource_factory.cpp',
   'nvofapi/nvofapi_image.cpp',
   'nvofapi/nvofapi_instance.cpp',
   'nvofapi/nvofapi_d3d12_instance.cpp',
   'nvofapi/nvofapi_vk_instance.cpp',
+  'nvofapi/vulkan.cpp',
+  'nvofapi_globals.cpp',
   'nvofapi.cpp',
   'nvofapi_d3d12.cpp',
   'nvofapi_vk.cpp',
