--- a/config.h.in
+++ b/config.h.in
@@ -2,5 +2,7 @@
 
 #define DXVK_NVAPI_BUILD_COMPILER "@BUILD_COMPILER@"
 #define DXVK_NVAPI_BUILD_COMPILER_VERSION "@BUILD_COMPILER_VERSION@"
+#define DXVK_NVAPI_BUILD_COMPILER_ARGS "@BUILD_COMPILER_ARGS@"
+#define DXVK_NVAPI_BUILD_LINKER_ARGS "@BUILD_LINKER_ARGS@"
 #define DXVK_NVAPI_BUILD_TARGET "@BUILD_TARGET@"
 #define DXVK_NVAPI_BUILD_TYPE "@BUILD_TYPE@"
